# chainblocks

./: .gitignore  .gitmodules  404.html  README.md  index.html  noexcept_helper_test.cpp  run-samples.sh  run_tests  sitemap.xml
.github/workflows/: build-doc.yml  build-ios.yml  build-linux-valgrind.yml  build-linux.yml  build-macos.yml  build-wasm.yml  build-windows.yml  codecov.yml  main.yml  publish-release.yml  test-macos-gpu.yml
ai/raw-data-for-fine-tuning-v1/general-wires/: switchto_query.shs
cmake/: Modules.cmake  Platform.cmake  Root.cmake  Rust.cmake  test_script.sh
cmake/rust/: union_Cargo.toml.in
contribute/: index.html
contribute/code/: index.html
contribute/code/build-shards/: index.html
contribute/code/run-shards/: index.html
contribute/contributing-changes/: index.html
contribute/docs/: index.html
contribute/docs/start-documenting/: index.html
contribute/docs/write-documentation/: index.html
contribute/getting-started/: index.html
contribute/wiki/: index.html
docs/: generate.edn  generate.shs
docs/docs/contribute/docs/: index.md  write-documentation.md
docs/samples/: run-sample.shs
docs/samples/shards/: missing.txt
download/: index.html
include/shards/: common_types.hpp  dllshard.hpp  exceptions.hpp  noexcept.hpp  shards.h  shards.hpp  shards.swift  shardwrapper.hpp  utility.hpp
learn/: index.html
learn/shards/: index.html
learn/shards/primer/: index.html
learn/shards/primer/coding-with-shards/: index.html
learn/shards/primer/the-flow/: index.html
learn/shards/tutorials/: index.html
lib/gfx/: atmosphere.shs  cubemap-utils.shs  fbl-shared.shs  pbr.shs  pbr.wgsl  shared.shs
lib/ml/: embeddings.shs  test.shs
reference/: index.html
reference/shards/: index.html
reference/shards/enums/: index.html
reference/shards/lisp/: index.html
reference/shards/overview/: index.html
reference/shards/shards/: index.html
search/: search_index.json
shards/: shards.natvis
shards/cli/: CMakeLists.txt  emscripten_api.cpp  main.cpp
shards/core/: CMakeLists.txt  async.hpp  brancher.hpp  capturing_brancher.hpp  foundation.hpp  object_type.hpp  ops_internal.cpp  ops_internal.hpp  params.hpp  runtime.cpp  runtime.hpp  serialization.hpp  shards_macros.hpp  taskflow.cpp  type_info.cpp  type_info.hpp  utils.cpp  utils.hpp  wire_doppelganger_pool.hpp
shards/core/serialization/: file_reader_writer.hpp
shards/egui/: Cargo.toml
shards/egui/src/: state.rs
shards/fast_string/: storage.cpp
shards/gfx/: CMakeLists.txt  context.cpp  geom.cpp  geom.hpp  gfx_events.js  loop.cpp  loop.hpp  mesh.cpp  mesh.hpp  mesh_utils.hpp  render_graph_evaluator.cpp  renderer.cpp  renderer_storage.hpp  window.cpp  window.hpp  window_em.hpp
shards/gfx/data_cache/: asset_loader.cpp  data_cache.cpp  data_cache.hpp  data_cache_impl.cpp  derived.hpp  fmt.hpp
shards/gfx/data_format/: texture.cpp  texture.hpp
shards/gfx/drawable_processors/: mesh_drawable_processor.hpp
shards/gfx/features/: alpha_cutoff.hpp
shards/gfx/gltf/: gltf.cpp
shards/gfx/tests/: CMakeLists.txt  renderer_utils.hpp  test_assets.cpp
shards/gfx/texture_file/: texture_file.cpp
shards/input/: debug.hpp  detached.hpp  event_decoder.cpp  events.hpp  master.cpp  master.hpp  state.hpp
shards/lang/: Cargo.toml  bindings.h
shards/lang/src/: ast.rs  cli.rs  directory.shs  eval.rs  formatter.rs  lib.rs  print.rs  read.rs  shards.pest
shards/langffi/: Cargo.toml  build.rs
shards/langffi/src/: lib.rs
shards/log/: CMakeLists.txt  log.cpp  log.hpp
shards/mal/: CMakeLists.txt  SHCore.cpp  stepA_mal.cpp
shards/modules/assert/: assert.cpp
shards/modules/audio/: audio.cpp
shards/modules/candle/: CMakeLists.txt  Cargo.toml
shards/modules/candle/src/: audio.rs  lib.rs  model.rs  tokenizer.rs  whisper.rs
shards/modules/channels/: channels.cpp  channels.hpp  events.cpp
shards/modules/core/: casting.cpp  core.cpp  core.hpp  exposed.cpp  flow.hpp  logging.cpp  math.hpp  time.cpp  wires.cpp  wires.hpp
shards/modules/crypto/: Cargo.toml
shards/modules/debug/: debug.cpp
shards/modules/desktop/: desktop.win.cpp
shards/modules/egui/: renderer.cpp  rust_interop.cpp
shards/modules/fs/: fs.cpp
shards/modules/genetic/: genetic.cpp
shards/modules/gfx/: CMakeLists.txt  buffer.cpp  camera.cpp  drawable.cpp  feature.cpp  gfx.hpp  gltf.cpp  gltf_data_shards.cpp  material.cpp  mesh.cpp  param_types.hpp  renderer.hpp  shards_types.hpp  steps.cpp  window.cpp
shards/modules/http/: http.cpp
shards/modules/imaging/: CMakeLists.txt  imaging.cpp
shards/modules/inputs/: inputs.cpp
shards/modules/json/: json.cpp
shards/modules/langffi/: CMakeLists.txt  Cargo.toml
shards/modules/langffi/src/: lib.rs
shards/modules/llm/: CMakeLists.txt  embedd.cpp
shards/modules/markdown/: Cargo.toml
shards/modules/markdown/src/: lib.rs
shards/modules/network/: network.hpp  network_common.cpp  network_kcp.cpp  network_ws.cpp
shards/modules/onnx/: CMakeLists.txt  Cargo.toml
shards/modules/onnx/src/: lib.rs
shards/modules/os/: CMakeLists.txt  process.cpp
shards/modules/physics/: shapes.cpp  soft_body.cpp
shards/modules/reflection/: reflection.cpp
shards/modules/riscv/: CMakeLists.txt  riscv.cpp
shards/modules/run/: CMakeLists.txt  run.cpp
shards/rust/src/: core.rs  shard.rs  types.rs  util.rs
shards/tests/: _test_em  _test_em_server  audio.shs  casting-numbers.shs  db.shs  defs.shs  fib.shs  flows.shs  general.shs  gfx-gltf.shs  gfx-pbr.shs  gfx-shader-translator-4.shs  gfx-texture.shs  gltf2.shs  hello.shs  help2.shs  imaging.shs  kdtree.shs  llm.shs  markdown.shs  ml.shs  nested-loops.shs  nested-stop.shs  network-ws.shs  network.shs  onnx.shs  physics.shs  pure.shs  riscv.shs  rust.shs  shell.shs  table-recurse.shs  test_runtime.cpp  whisper.shs  wires-embed-issue.shs
shards/tests/data/: RGBA-quad.glb
shards/tests/server/: config.shs  control.shs  http-server-inner.shs  http-server-shared.shs  http-server.shs  index.html  tests.http
shards/tests/web/: package-lock.json  run_browser.js  run_server  shared
shards/union/: CMakeLists.txt
(+1236 files in other folders)
