[package]
name = "shards-langffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies] 
shards = { path = "../rust" }
shards-lang = { path = "../lang" }
bitcode = { version = "0.6.3", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.155"

[build-dependencies]
cbindgen = "0.24.0"
