[package]
name = "shards-ml"
description = ""
license = "BSD-3-Clause"
version = "0.1.0"
authors = ["Giovanni Petrantoni <sinkingsugar@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
lazy_static = "1.5.0"
shards = { path = "../../rust" }
compile-time-crc32 = "0.1.2"
tokenizers = { version = "0.21.0", default-features = false, features = [
  "onig",
] }

candle-core = { version = "0.8.2", git = "https://github.com/huggingface/candle", rev = "17cbbe4286f25934197db79a244fd0694259c899" }
candle-transformers = { version = "0.8.2", git = "https://github.com/huggingface/candle", rev = "17cbbe4286f25934197db79a244fd0694259c899" }
candle-nn = { version = "0.8.2", git = "https://github.com/huggingface/candle", rev = "17cbbe4286f25934197db79a244fd0694259c899" }
tempfile = "3.10.1"
# candle-core = { version = "0.6.0", git = "https://github.com/sinkingsugar/candle-wgpu.git", rev = "c8f4701f83d523b40c70075fabbd10028e04d049" }
# candle-transformers = { version = "0.6.0", git = "https://github.com/sinkingsugar/candle-wgpu.git", rev = "c8f4701f83d523b40c70075fabbd10028e04d049" }
# candle-nn = { version = "0.6.0", git = "https://github.com/sinkingsugar/candle-wgpu.git", rev = "c8f4701f83d523b40c70075fabbd10028e04d049" }

serde_json = "1.0.136"
once_cell = "1.20.2"

[features]
default = []
metal = ["candle-core/metal", "candle-transformers/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-transformers/cuda", "candle-nn/cuda"]
accelerate = ["candle-core/accelerate", "candle-transformers/accelerate", "candle-nn/accelerate"]
