[package]
name = "shards-markdown"
description = ""
license = "BSD-3-Clause"
version = "0.1.0"
authors = ["Giovanni Petrantoni <sinkingsugar@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
lazy_static = "1.5"
shards = { path = "../../rust" }
compile-time-crc32 = "0.1"
pulldown-cmark = { version = "0.12", default-features = false }
htmd = "0.1"