[package]
name = "shards-onnx"
description = ""
license = "BSD-3-Clause"
version = "0.1.0"
authors = ["Giovanni Petrantoni <sinkingsugar@gmail.com>"]
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
shards = { path = "../../rust" }
compile-time-crc32 = "0.1.2"
ort = { version = "=2.0.0-rc.9" }
ndarray = "0.16"
